[#799] Add model name in test location